tests/programs/invalid/narrowing.java
public class A {
  public A() {}
  public void m(int i) {
    char c = 'a';
    c = i;
  }
}